# NMTSat

./: .gitignore  .gitmodules
nmsat-sdr/: .gitignore  CMakeLists.txt  README.md  init.sh  run_longevity.sh  run_sync.sh
nmsat-sdr/src/: blade.c  log.h  process.c  process.h  sdr.c  sdr.h
nmsat-sdr/tests/: longevity.c  main.c  peek_signal.c  view_desync.py  visualize.py
nmtsat-fsw/docs/: NMTSat_components.md  NMTSat_plantuml.UML
nmtsat-sdr/: .gitignore  CMakeLists.txt  Dockerfile  README.md  init.sh  setup.sh
nmtsat-sdr/src/: blade.h
nmtsat-sdr/tests/: longevity.c  sync_test.c  visualize_sync.py
